--- a/client/vite-project/style.scss
+++ b/client/vite-project/style.scss
@@ -1,88 +1,5 @@
-.chat-container { 
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    gap: 5px; 
+@import './views/joinPage';
+@import './views/chatRoomsList';
+@import './views/chatRoom';
 
-    .chat-box {
-        height: 350px;
-        width: 600px;
-        border: 2px solid #c4c4c4; 
-        border-radius: 10px;
-
-        .chat-list {
-            display: flex;
-            flex-direction: column;
-           // border: 2px solid blue; 
-            gap: 5px; 
-            padding-right: 50px;
-   
-                .sent-container {
-                   // border: 2px solid red;
-                    display: flex;
-                    justify-content: flex-end;
-                    
-                    .sent {
-                        display: flex;
-                        font-size: large;
-                        color: #3a3a3a; 
-                        max-width: 45%;
-                        justify-content: flex-end;
-                        border-radius: 15px;              
-                        background-color: #ecd0ff;
-                        padding: 10px;
-                    }
-                }
-
-                .received-container {
-                  //  border: 2px solid rgb(0, 255, 76); 
-                    display: flex;
-                    
-                    .received {
-                        max-width: 45%;        
-                        font-size: larger;
-                        color: #3a3a3a;       
-                        border-radius: 15px;              
-                        background-color: rgb(231, 231, 231);
-                        padding: 10px;
-                    }
-                }
-                
-            
-        }
-        
-        
-    }
-    
-    .send-message-container {
-        font-family: Arial, Helvetica, sans-serif;
-
-        .input-field {
-            height: 25px;
-            //border: none; 
-            border-radius: 10px;
-            border: 2px solid #c4c4c4; 
-            width: 475px;
-            height: 50px;
-        }
-        
-        .send-btn {
-            width: 120px;
-            height: 30px;
-            border-radius: 20px;
-            border-style: none;
-            background-color: #ecd0ff;
-            cursor: pointer;
-            font-size: 16px;
-
-            &:hover {
-                background-color: #b98adf;
-            }
-        }
-    
-        
-    }
-}
-li {
-    list-style: none;
-}
+@import './assets/buttonStyle';
