--- a/client/vite-project/assets/_buttonStyle.scss
+++ b/client/vite-project/assets/_buttonStyle.scss
@@ -6,4 +6,8 @@
     background-color: #ecd0ff;
     cursor: pointer;
     font-size: 16px;
+
+    &:hover {
+        background-color: #b98adf;
+    }
 }
