--- a/client/vite-project/views/_chatRoom.scss
+++ b/client/vite-project/views/_chatRoom.scss
@@ -66,12 +66,13 @@
         font-family: Arial, Helvetica, sans-serif;
 
         .input-field {
-            height: 25px;
+            height: 15px;
             //border: none; 
             border-radius: 10px;
             border: 2px solid #c4c4c4; 
             width: 475px;
             height: 50px;
+            padding: 0.5rem;
         }
     }
 }
